add aos setting

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@ current: index
 <main>
     <div class="jumbotron rounded-0 mb-6 bgCover banner">
         <div class="container h-100">
-            <div class="row justify-contant-end align-items-center h-100">
+            <div class="row justify-contant-end align-items-center h-100" data-aos="fade-up">
                 <div class="col-12 col-md-5 ml-auto">
                     <p class="h1 text-white">Perfume your day</h1>
                     <p class="h5 text-white mb-3">A perfume is like a piece of clothing, a message, a way of presenting oneself a costume that according to the person who wears it.</p>
@@ -23,9 +23,9 @@ current: index
                 <img src="assets/images/index2.jpg" class="img-fluid" data-aos="fade-right">
             </li>
             <li class="col-12 col-md-6 mb-5 mb-md-0">
-                <div class="container" data-aos="fade-left">
+                <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-12 col-md-10 col-lg-8">
+                        <div class="col-12 col-md-10 col-lg-8" data-aos="fade-left">
                             <h2>Gabrielle CHANEL</h2>
                             <p class="h5">全新嗅覺體驗，花香四溢、明亮馥郁。結合茉莉、依蘭依蘭、橙花和最迷人的格拉斯晚香玉之花香，呈現出夢幻花香氣息。 極具女性特質的香奈兒嘉柏麗香水，專為光芒四射的她而生。</p>
                             <a href="#" class="h6 text-primary btn pl-0">查看更多</a>
@@ -75,15 +75,15 @@ current: index
                     <div class="row justify-content-center">
                         <div class="col-12 col-md-10 col-lg-8">
                             <ul class="list-unstyled">
-                                <li class="mb-6" data-aos="fade-right">
+                                <li class="mb-6" data-aos="fade-right" data-aos-delay="300">
                                     <h4>1.<br>Levels of Preventive<br>Maintenance Compliance</h4>
                                     <p class="h5 text-muted">The core idea of preventative maintenance is the performance of proactive actions against unscheduled downtime in order to identify potential defects before they evolve into something more severe.</p>
                                 </li>
-                                <li class="mb-6" data-aos="fade-right">
+                                <li class="mb-6" data-aos="fade-right" data-aos-delay="300">
                                     <h4>2.<br>Percentage of Planned<br>Maintenance</h4>
                                     <p class="h5 text-muted"> The planned maintenance percentage is the total planned maintenance time in your CMMS software over a date range over the total number of hours of a service performed by the technicians.</p>
                                 </li>
-                                <li class="mb-6" data-aos="fade-right">
+                                <li class="mb-6" data-aos="fade-right" data-aos-delay="300">
                                     <h4>3.<br>Critical percentage of<br>planned maintenance</h4>
                                     <p class="h5 text-muted">Calculating the critical percentage of planned maintenance will help you prioritize the most important operations that should be performed immediately.</p>
                                 </li>
@@ -99,7 +99,7 @@ current: index
       <section class="bg-secondary">
           <div class="container py-4">
               <ul class="row list-unstyled">
-                  <li class="col-12 col-md-4">
+                  <li class="col-12 col-md-4 mb-4 mb-md-0" >
                       <div class="d-flex flex-column">
                         <div class="posstionRel shakeHover">
                             <img class="img-fluid" src="assets/images/index6.jpg">
@@ -110,7 +110,7 @@ current: index
                           <p class="h6">NT1,380<del class="ml-1">NT$1,580</del></p>
                       </div>
                   </li>
-                  <li class="col-12 col-md-4">
+                  <li class="col-12 col-md-4 mb-4 mb-md-0">
                     <div class="d-flex flex-column">
                         <div class="posstionRel shakeHover">
                             <img class="img-fluid" src="assets/images/index7.jpg">
@@ -121,7 +121,7 @@ current: index
                         <p class="h6">NT1,580</p>
                     </div>
                   </li>
-                  <li class="col-12 col-md-4">
+                  <li class="col-12 col-md-4 mb-4 mb-md-0">
                     <div class="d-flex flex-column">
                         <div class="posstionRel shakeHover">
                             <img class="img-fluid" src="assets/images/index8.jpg">
@@ -140,10 +140,10 @@ current: index
       <section>
           <div class="container py-5">
               <div class="row">
-                  <div class="col-12 col-md-8">
+                  <div class="col-12 col-md-8" data-aos="fade-left" data-aos-delay="300">
                     <img src="./assets/images/index9.jpg" class="img-fluid">
                   </div>
-                  <div class="col-12 col-md-4 d-flex flex-column align-items-start justify-content-center">
+                  <div class="col-12 col-md-4 d-flex flex-column align-items-start justify-content-center" data-aos="fade-right" data-aos-delay="300">
                     <h2>Bottle-Recycling</h2>
                     <p class="h6 mb-3">Recycle your used empty bottles and be rewarded!</p>
                     <p class="h6 mb-3">For the past 10 years, we have collected over 800,000 bottles through Empty Bottle Recycling Campaign and planted more than 860 pine trees for a better environment.For the past 10 years, we have collected over 800,000 bottles through Empty Bottle Recycling Campaign and planted more than 860 pine trees for a better environment.</p>
@@ -156,7 +156,7 @@ current: index
 
       <div class="jumbotron mb-0 rounded-0 subBanner bgCover">
         <div class="container h-100">
-            <form action="./index.html" class="h-100">
+            <form action="./index.html" class="h-100" data-aos="fade-up">
                 <div class="form-row align-items-end h-100">
                     <div class="form-group col-12 col-md-4 mr-auto">
                         <label for="inputEmail">
