add aos setting

--- a/app/product.html
+++ b/app/product.html
@@ -39,7 +39,7 @@ current: product
 
     <section class="container py-6">
         <ul class="row list-unstyled">
-            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6">
+            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6" data-aos="zoom-in">
                 <div class="card border-0 shakeHover">
                     <a href="details.html" class="card-img-top">
                         <img src="assets/images/product1.jpg" class="img-fluid">
@@ -73,7 +73,7 @@ current: product
                     </div>
                 </div>
             </li>
-            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6">
+            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6" data-aos="zoom-in">
                 <div class="card border-0 shakeHover">
                     <a href="details.html" class="card-img-top">
                         <img src="assets/images/product2.jpg" class="img-fluid">
@@ -107,7 +107,7 @@ current: product
                     </div>
                 </div>
             </li>
-            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6">
+            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6" data-aos="zoom-in">
                 <div class="card border-0 shakeHover">
                     <a href="details.html" class="card-img-top">
                         <img src="assets/images/product3.jpg" class="img-fluid">
@@ -141,7 +141,7 @@ current: product
                     </div>
                 </div>
             </li>
-            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6">
+            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6" data-aos="zoom-in">
                 <div class="card border-0 shakeHover">
                     <a href="details.html" class="card-img-top">
                         <img src="assets/images/product4.jpg" class="img-fluid">
@@ -175,7 +175,7 @@ current: product
                     </div>
                 </div>
             </li>
-            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6">
+            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6" data-aos="zoom-in">
                 <div class="card border-0 shakeHover">
                     <a href="details.html" class="card-img-top">
                         <img src="assets/images/product5.jpg" class="img-fluid">
@@ -209,7 +209,7 @@ current: product
                     </div>
                 </div>
             </li>
-            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6">
+            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6" data-aos="zoom-in">
                 <div class="card border-0 shakeHover">
                     <a href="details.html" class="card-img-top">
                         <img src="assets/images/product6.jpg" class="img-fluid">
@@ -243,7 +243,7 @@ current: product
                     </div>
                 </div>
             </li>
-            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6">
+            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6" data-aos="zoom-in">
                 <div class="card border-0 shakeHover">
                     <a href="details.html" class="card-img-top">
                         <img src="assets/images/product7.jpg" class="img-fluid">
@@ -277,7 +277,7 @@ current: product
                     </div>
                 </div>
             </li>
-            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6">
+            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6" data-aos="zoom-in">
                 <div class="card border-0 shakeHover">
                     <a href="details.html" class="card-img-top">
                         <img src="assets/images/product8.jpg" class="img-fluid">
@@ -311,7 +311,7 @@ current: product
                     </div>
                 </div>
             </li>
-            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6">
+            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6" data-aos="zoom-in">
                 <div class="card border-0 shakeHover">
                     <a href="details.html" class="card-img-top">
                         <img src="assets/images/product9.jpg" class="img-fluid">
@@ -345,7 +345,7 @@ current: product
                     </div>
                 </div>
             </li>
-            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6">
+            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6" data-aos="zoom-in">
                 <div class="card border-0 shakeHover">
                     <a href="details.html" class="card-img-top">
                         <img src="assets/images/product10.jpg" class="img-fluid">
@@ -379,7 +379,7 @@ current: product
                     </div>
                 </div>
             </li>
-            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6">
+            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6" data-aos="zoom-in">
                 <div class="card border-0 shakeHover">
                     <a href="details.html" class="card-img-top">
                         <img src="assets/images/product11.jpg" class="img-fluid">
@@ -413,7 +413,7 @@ current: product
                     </div>
                 </div>
             </li>
-            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6">
+            <li class="col-6 col-sm-4 col-md-3 mb-5 mb-md-6" data-aos="zoom-in">
                 <div class="card border-0 shakeHover">
                     <a href="details.html" class="card-img-top">
                         <img src="assets/images/product12.jpg" class="img-fluid">
@@ -454,7 +454,7 @@ current: product
 
     <div class="jumbotron mb-0 rounded-0 subBanner bgCover">
         <div class="container h-100">
-            <form action="./index.html" class="h-100">
+            <form action="./index.html" class="h-100" data-aos="fade-up">
                 <div class="form-row align-items-end h-100">
                     <div class="form-group col-12 col-md-4 mr-auto">
                         <label for="inputEmail">
